--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 	min-height:       100vh;
 	background-color: aliceblue;
 	padding:          50px 0;
+	color:            #f2f2f2;
 }
 
 svg {
@@ -28,6 +29,66 @@ button {
 
 button:focus {
 	outline: 0;
+}
+
+.placeholder h1,
+.placeholder .weather-time,
+.placeholder .weather-description,
+.placeholder .weather-data,
+.placeholder .weather_hour {
+	background-color: #ccc;
+}
+
+.placeholder h1 {
+	width:  350px;
+	height: 30px;
+}
+
+.placeholder .weather-description {
+	height: 25px;
+}
+
+.placeholder .text-placeholder {
+	background-color: #737373;
+	height:           15px;
+	margin-bottom:    10px;
+}
+
+.placeholder .weather-data_icon-container,
+.placeholder .icon-placeholder {
+	background: #fff;
+	position:   relative;
+	overflow:   hidden;
+}
+
+.placeholder .weather-data_icon-container::before,
+.placeholder .icon-placeholder::before,
+.placeholder .weather-data_icon-container::after,
+.placeholder .icon-placeholder::after {
+	content:    '';
+	display:    block;
+	position:   absolute;
+	background: #777;
+	border:     1px solid #000;
+	bottom:     0;
+}
+
+.placeholder .weather-data_icon-container::before,
+.placeholder .icon-placeholder::before {
+	width:             80%;
+	height:            60%;
+	left:              -30px;
+	-webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+	clip-path:         polygon(50% 0%, 0% 100%, 100% 100%);
+}
+
+.placeholder .weather-data_icon-container::after,
+.placeholder .icon-placeholder::after {
+	width:             100%;
+	height:            80%;
+	right:             -30px;
+	-webkit-clip-path: polygon(50% 10%, 0 100%, 100% 100%);
+	clip-path:         polygon(50% 10%, 0% 100%, 100% 100%);
 }
 
 [class$='day'],
@@ -106,6 +167,7 @@ button:focus {
 .weather-data {
 	flex:       0 0 50%;
 	text-align: center;
+	padding:    15px 20px;
 }
 
 .weather-data_icon-container {
@@ -134,6 +196,8 @@ button:focus {
 	margin:          30px auto;
 	padding:         20px 0;
 	scroll-behavior: smooth;
+	position:        relative;
+	z-index:         1;
 }
 
 .weather-hourly_controls {
